remove Example + names instead of numbers

--- a/seminar_010.Rmd
+++ b/seminar_010.Rmd
@@ -23,8 +23,6 @@ editor_options:
 
 Установка пакеты: в меню Rstudio `Tools` - `Install packages`.
 
-* Пример.
-
 Подключаем пакет `tidyverse`, `rio` и `skimr`!
 
 ```{r}
@@ -60,7 +58,7 @@ library(skimr) # описательные статистики
   - `lattice` пригодится нам для графиков
   - `DataExplorer` для быстрого автоматического графического анализа
 
-* Пример. Загружаем данные из spss
+Загружаем данные из spss.
 
 Предварительно должен быть подключен пакет `rio`.
 
@@ -93,7 +91,7 @@ tail(some)
 ```
 
 Исключение составляет только загрузка данных `eviews`.
-Пакет `rio`, выложенный на официальный репозиторий пакетов CRAN, ещё не умеет импортировать его. 
+Пакет `rio`, выложенный на официальный репозиторий пакетов CRAN, ещё не умеет импортировать его.
 Однако разрабатываемая версия `rio` уже справляется.
 Ставим версию `rio` от разработчика
 
@@ -110,7 +108,6 @@ glimpse(housing)
 
 # Первый взгляд
 
-* Пример.
 Возьмём встроенный в пакет `ggplot2` набор данных про бриллианты.
 
 ```{r}
@@ -159,7 +156,7 @@ qplot(data = df, x = carat, y = price)
 
 ```{r}
 library(lattice) # загружаем пакет
-splom(df[1:1000, c(1, 5, 6)]) # строим диаграммы рассеяния для 1000 наблюдений
+splom(df[1:1000, c("carat", "depth", "table")]) # строим диаграммы рассеяния для 1000 наблюдений
 ```
 
 * Упражнение 3.
@@ -169,7 +166,7 @@ splom(df[1:1000, c(1, 5, 6)]) # строим диаграммы рассеяни
 
 ```{r}
 # qplot(data = ___, x = ___) +
-#  labs(x = ___, y = ___, title = ___)  
+#  labs(x = ___, y = ___, title = ___)
 ```
 
 Постройте диаграмму рассеяния: по оси абсцисс изобразите параметры
@@ -177,14 +174,12 @@ splom(df[1:1000, c(1, 5, 6)]) # строим диаграммы рассеяни
 
 ```{r}
 # qplot(data = ___, x = ___, y = ___) +
-#  labs(___)  
+#  labs(___)
 ```
 
 # Одним махом!
 
 Есть и пакеты для автоматического графического анализа данных, например, `DataExplorer`.
-
-* Пример.
 
 Если до прихода гостей осталось 5 минут и нужно быстро глянуть на данные:
 
@@ -196,8 +191,6 @@ create_report(diamonds)
 # Возня с данными
 
 Отобрать наблюдения по нескольким критериям можно с помощью команды `filter()`
-
-* Пример.
 
 - По каким критериям отобраны бриллианты?
 
@@ -217,8 +210,6 @@ skim(diamonds2)
 ```
 
 Перейдём к созданию новых переменных!
-
-* Пример.
 
 Мы добавим в набор данных логарифм цены каждого бриллианта.
 - Под каким названием добавлена переменная в набор данных?
@@ -240,8 +231,6 @@ skim(diamonds4)
 
 
 Табличку с данными иногда приходится сортировать!
-
-* Пример.
 
 Мы последовательно выполним два действия, сортировку и отбор самых верхних строк.
 
@@ -297,8 +286,6 @@ diamonds6
 Самым простым и потому универсальным является формат `csv`,
 comma separated values.
 Этот формат понимают все программы, работающие с данными.
-
-* Пример.
 
 Экспортируем набор данных про бриллианты в `csv`:
 
