--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -11,7 +11,9 @@ lang: ru-RU
     - [Решение семинара](http://bdemeshev.github.io/r_intro_3/seminar_010_solved.html)
 
 
-* Семинар 2, 17 сентября. Визуализация данных
+* Семинар 2, 17 сентября. Качественные переменные, визуализация, ещё немного манипуляций с данными
+
+    - Условие и данные, [sem_020.zip](https://github.com/bdemeshev/r_intro_3/raw/master/archives/sem_020.zip)
 
 
 * Семинар 3, 24 сентября. Метод главных компонент
