--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -45,6 +45,7 @@ lang: ru-RU
 !!!15 октября занятий не будет
 
 * Семинар 6, 22 октября. Маркдаун и красивое представление результатов.
+    - Условие и данные, [sem_060.zip](https://github.com/bdemeshev/r_intro_3/raw/master/archives/sem_060.zip)
 
 
 * Семинар 7, 29 октября. Логистическая регрессия и классификация.
