--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -50,7 +50,7 @@ lang: ru-RU
 
 * Семинар 7, 29 октября. Логистическая регрессия и классификация.
 
-!!!5 ноября — похоже праздник?
+!!!5 ноября —  праздник
 
 * Семинар 8, 12 ноября. Кросс-валидация.
 
