--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -51,6 +51,7 @@ lang: ru-RU
 
 
 * Семинар 7, 29 октября. Логистическая регрессия и классификация.
+  - Условие и данные, [sem_070.zip](https://github.com/bdemeshev/r_intro_3/raw/master/archives/sem_070.zip)
 
 !!!5 ноября —  праздник
 
